# pretraining-and-finetuning

./: .gitignore  mlx_export.py  pyproject.toml
notebooks/: create_finetune_existing_100m_notebook.py  create_train_100m_notebook.py  finetune_existing_100m_hf_colab.ipynb  step_01_02_colab_gpu.ipynb  train_100m_gpt_from_scratch_colab.ipynb
preference_optimization/: chat_formatting.py  train_preference.py  train_reward.py  trl_compat.py
step_01_data_prep/cpt/: build_scientific_archive_text_jsonl.py  build_text_jsonl.py  download_arxiv_batch.py  download_arxiv_files.py  get_dataset.py
step_01_data_prep/instruction/: main.py  main_async.py  main_batch.py  test.py
step_02_cpt/: evals.py  inference.py  sft.py
step_03_instruction_tuning/: app.py  inference.py  llm_comparison_judge.py  llm_judge.py  merge_adapter.py  print_judge_scores.py  sft.py  single_inference.py  task_chat.py
step_03_instruction_tuning/mlx/: inference.py
step_04_preference_optimization/: __init__.py  build_dpo_dataset.py  chat_formatting.py  convert_alpaca_to_chat.py  evaluate_reward_model.py  generate_ranked_pairs.py  generate_ranked_pairs_openai.py  train_preference.py  train_reward.py
step_04_preference_optimization/diversity_evals/: diversity.py  embedding_viz.py  generate_responses.py  llm_diversity_judge.py  plot_diversity_analysis.py
step_05_paper_researcher/: __init__.py  backends.py  model.py  parsing.py  tasks.py  types.py
